# alexandria

./: .gitignore  .gitmodules  books.go  config.go  docker-compose.yml  go.mod  go.sum  handlers.go  main.go  postgres.go  sqlite.go  storage.go
.github/workflows/: clojure.yml  cover-gen.yml  dockerimage.yml  docs.yml  go.yml  journal.yml  links.yml  server.yml  ui.yml
cover-gen/: Dockerfile  config.go  go.mod  go.sum  handler.go  main.go  service.go  storage.go
image-gen/: Dockerfile
journal/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
journal/migrations/2020-03-08-233903_create_journal/: up.sql
journal/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
links/: CHANGELOG.md  Dockerfile  Makefile  README.md  project.clj
links/doc/: intro.md
mind/: go.mod  go.sum  main.go
mind/cmd/: add.go  addBook.go  addLink.go  addLinkTag.go  addPaper.go  addTag.go  book.go  config.go  delete.go  deleteDocument.go  download.go  downloadBook.go  edit.go  editBook.go  get.go  getBook.go  getLink.go  getPaper.go  getTags.go  listTags.go  login.go  removeLinkTag.go  root.go  setConfig.go  tag.go  tagBook.go  tagLink.go  tagPaper.go  untag.go  untagBook.go  untagLink.go  untagPaper.go  (+2 more)
server/: Dockerfile  Makefile  auth.go  books.go  config.go  cors-json-file.json  docker-compose.yml  docs.go  firebase.go  go.mod  go.sum  handlers.go  main.go  papers.go  postgres.go  sqlite.go  storage.go  user.go
ui/: .gitignore  README.md  alexandria.css  alexandria.js  elm.json  index.html  package-lock.json  package.json  project.clj  shadow-cljs.edn
(+100 files in other folders)
