[package]
name = "journal"
version = "0.1.0"
authors = ["Joel Holmes <holmes89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde_json = "1.0"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "^1.1.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
