[package]
name = "journal"
version = "0.1.0"
authors = ["Joel Holmes <holmes89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde_json = "1.0"
rocket_contrib = { version = "0.4.2", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "^1.1.0", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
r2d2 = "0.8"
uuid = { version = "^0.7.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "journal"
path = "src/main.rs"
